name:                Frames-dsv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acowley/Frames-dsv#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           2018 Anthony Cowley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frames.Dsv
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , Frames
                     , vinyl
                     , hw-dsv >= 0.3 && < 0.4
                     , pipes >= 4.1 && < 5
                     , text
                     , vector
                     , template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/acowley/Frames-dsv

test-suite spec
  type:                     exitcode-stdio-1.0
  hs-source-dirs:           test
  main-is:                  Spec.hs
  build-depends:            base, Frames, Frames-dsv, pipes, hspec
  default-language:         Haskell2010
